front, plus forms

--- a/sites/all/themes/custom/projects_harvard/projects-harvard.css
+++ b/sites/all/themes/custom/projects_harvard/projects-harvard.css
@@ -1,3 +1,7 @@
+body {
+  background:url(images/projects-bg.png) fixed repeat-x 0 100% #a13804;
+  }
+
 #header h1 {
   width: 233px;
   height: 76px;
@@ -18,17 +22,6 @@
   background:url(images/front-row2-events.png);
   }
 
-#block-views-iqss_project_sites-block_1 {
-  background: url(images/front-row3-bg.png) repeat-x #fefefe;
-  min-height: 500px;
-  position:relative;
-  border: 1px solid #e1e1e1;
-  border-top: none;
-  border-bottom: none;
-  line-height: 110%;
-  }
-
-
 #block-views-iqss_project_sites-block_1 h3 {
   background: url(images/triangle-new-left.png) no-repeat transparent;
   width: 51px;
@@ -38,3 +31,7 @@
   margin: 0 0 0 -1px;
   }
 
+#more-info p {
+  margin-bottom: 1em;
+  font-size: 16px;
+  }
