--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -35,7 +35,8 @@ body.no-sidebars #content-main {
   padding:30px;
   }
 
-body.front #content-main {
+body.front #content-main,
+body.page-site-register #content-main {
   padding:0;
   }
 
