--- a/sites/all/themes/openscholar/scholar_base/users.css
+++ b/sites/all/themes/openscholar/scholar_base/users.css
@@ -5,13 +5,19 @@ body.section-user, body.section-users {
   }
 
 .section-user #container,
-.section-users #container {
+.section-users #container,
+.page-site-register #container {
  width: 506px;
  margin: 0 auto;
  }
 
+.page-site-register #container {
+  width: 740px;
+  }
+
 .section-user #content-wrapper,
-.section-users #content-wrapper {
+.section-users #content-wrapper,
+.page-site-register #content-wrapper {
  padding: 30px 30px 40px 30px !important;
  background: #fff;
  border: 1px solid #ccc;
@@ -20,7 +26,8 @@ body.section-user, body.section-users {
  }
 
 .section-user #content-main,
-.section-users #content-main {
+.section-users #content-main,
+.page-site-register #content-main {
   border: none !important;
   -moz-border-radius: 0 !important;
   -webkit-border-radius:0 !important;
@@ -29,52 +36,61 @@ body.section-user, body.section-users {
   }
 
 .section-user .footer-login,
-.section-users .footer-login {
+.section-users .footer-login,
+.page-site-register .footer-login {
   display:none;
   }
 
 .section-user #header h1,
-.section-users #header h1 {
+.section-users #header h1,
+.page-site-register #header h1 {
   margin: 0;
   }
 
 .section-user #footer,
-.section-userw #footer {
+.section-users #footer,
+.page-site-register #footer {
   padding-bottom: 0;
   padding-top: 34px;
   }
 
 .section-user input.form-submit,
-.section-users input.form-submit {
+.section-users input.form-submit,
+.page-site-register input.form-submit {
   float:right;
   margin-left: .3em;
   }
 
 .section-user h2.title,
-.section-users h2.title {
+.section-users h2.title,
+.page-site-register h2.title {
   display:none;
   }
 
 .section-user div.tabs ul.primary li a,
-.section-users div.tabs ul.primary li a {
+.section-users div.tabs ul.primary li a,
+.page-site-register div.tabs ul.primary li a {
   font-weight: normal;
   font-size: .8em;
   }
 
 .section-user fieldset,
-.section-users fieldset  {
+.section-users fieldset,
+.page-site-register fieldset{
   padding: 0;
   border: none;
   background: transparent;
   }
 
 .section-user div.tabs,
-.section-users div.tabs {
+.section-users div.tabs,
+.page-site-register div.tabs {
   height: auto;
   }
 
 .section-user h3,
-.section-users h3 {
+.section-users h3,
+.page-site-register h3 {
   font-size: 1.1em;
   }
 
