--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -418,6 +418,9 @@ body.cp-toolbar-mini #top ul.links li a:hover {
 
 body.no-sidebars #content-main, body.header-main #header-main {
   padding: 0;
+  padding-left: 2em;
+  padding-right: 2em;
+  width: auto;
   }
 
 #header-wrapper, #navbar, #content-wrapper, #footer {
