--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -88,6 +88,8 @@ p.copy {
   line-height: 29px;
   margin: 4px auto 0 auto;
   clear:both;
+  text-align:center;
+  min-height: .5em;
   }
 
 p.copy a, p.copy a:visited {
@@ -109,6 +111,8 @@ p.copy a.footer-login {
   -moz-border-radius:20px;
   -webkit-border-radius:20px;
   margin-left: 4px;
+  float: left;
+  line-height: 18px;
   }
 
 p.copy a.footer-login:hover {
