changes to users.css

--- a/sites/all/themes/openscholar/scholar_base/users.css
+++ b/sites/all/themes/openscholar/scholar_base/users.css
@@ -1,8 +1,5 @@
 /* USERS SECTION */
 
-body.section-user, body.section-users {
-  background: #ccc;
-  }
 
 .section-user #container,
 .section-users #container,
@@ -25,6 +22,11 @@ body.section-user, body.section-users {
  -webkit-border-radius: 4px;
  }
 
+.section-user #content-wrapper {
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+  }
+
 .section-user #content-main,
 .section-users #content-main,
 .page-site-register #content-main {
@@ -41,18 +43,6 @@ body.section-user, body.section-users {
   display:none;
   }
 
-.section-user #header h1,
-.section-users #header h1,
-.page-site-register #header h1 {
-  margin: 0;
-  }
-
-.section-user #footer,
-.section-users #footer,
-.page-site-register #footer {
-  padding-bottom: 0;
-  padding-top: 34px;
-  }
 
 .section-user input.form-submit,
 .section-users input.form-submit,
