padding bug reg form

--- a/sites/all/themes/openscholar/scholar_base/users.css
+++ b/sites/all/themes/openscholar/scholar_base/users.css
@@ -37,12 +37,15 @@
   background: transparent !important;
   }
 
+body.page-site-register #content-main {
+  padding: 0 !important;
+  }
+
 .section-user .footer-login,
 .section-users .footer-login,
 .page-site-register .footer-login {
   display:none;
   }
-
 
 .section-user input.form-submit,
 .section-users input.form-submit,
