--- a/sites/all/modules/contrib/activity/activity_comments/activity_comments.css
+++ b/sites/all/modules/contrib/activity/activity_comments/activity_comments.css
@@ -40,3 +40,19 @@ html.js .activity-comments-hide-comments .activity-comment-hidden {
 .activity-comments-meta div {
   display: inline;
 }
+
+.activity_comment-comment-form .form-submit {
+  float: right;
+  margin-right: .5em;
+}
+
+.activity-comment-text {
+  color: #999;
+  width: 255px; /* dependancy on .activity_comment-comment-form */
+}
+.activity-comment-onerow .activity-comment-text {
+  height: 20px!important;
+}
+.activity-comment-onerow .form-submit {
+  display: none;
+}
