--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -198,17 +198,17 @@ row {
 #activity,
 #about-abstract {
   width: 235px;
-  padding:50px 30px;
+  padding:28px 30px;
   float: left;
   }
 
 #publications {
-  width: 382px;
+  width: 282px;
   }
 
 #publications h2, #activity h2 {
   color: #959595;
-  font-size: 28px;
+  font-size: 22px;
   }
 
 #publications .views-row {
@@ -225,7 +225,6 @@ row {
 
 #activity {
   padding-left: 0;
-  padding-top:50px;
   }
 
 #activity h2 {
@@ -242,12 +241,12 @@ row {
   }
 
 #about-abstract {
-  width:257px;
+  width:357px;
   padding: 28px 18px 0 18px;
   background: #e2e7eb;
-  -moz-border-radius: 0 25px 0 0;
-  -webkit-border-radius: 0 25px 0 0;
-  border-radius: 0 25px 0 0;
+  -moz-border-radius: 0 6px 0 0;
+  -webkit-border-radius: 0 6px 0 0;
+  border-radius: 0 6px 0 0;
   }
 
 #about-abstract h2 {
@@ -259,12 +258,12 @@ row {
 
 #about-abstract p {
   font-size: 14px;
-  line-height: 23px;
+  line-height: 1.4empx;
   }
 
 #about-abstract .illustration {
   float: right;
-  margin: .5em 0 1em 1em;
+  margin: 0 0 1em 1em;
   width:67px;
   height:67px;
   background: url(images/widget.png) no-repeat 0 0 transparent;
