--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -1,15 +1,23 @@
 body {
   background:#293e4b;
-  font: 13px/1.5em helvetica, arial, sans-serif;
+  font: 12px/17px arial, helvetica, sans-serif;
   padding-bottom:30px;
   }
-
+/*
+#extradiv {
+  top: 620px;
+  width: 100%;
+  height: 1px;
+  background: red;
+  position: absolute;
+  }
+*/
 #wrapper {
   margin-top: 0;
   }
 
 #container {
-  width: 1000px;
+  width: 980px;
   margin: 0 auto;
   overflow:hidden;
   }
@@ -113,12 +121,13 @@ p.big-button a {
 span.big-button a {
   color: #fff;
   background: #ff7f01;
-  padding: 5px 10px 3px 10px;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
+  padding: 1px 10px 2px 10px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
   border-radius: 2px;
-  text-shadow: #666 0px 1px 1px;
+  /*text-shadow: #666 0px 1px 1px;
   text-shadow: rgba(51,51,51, .2) 0px 1px 1px;
+  */
   }
 
 ul#top-front li#get-form a:hover {
@@ -208,13 +217,15 @@ row {
 #publications,
 #activity,
 #about-abstract {
-  width: 235px;
-  padding:28px 30px 0 30px;
+  width: 214px;
+  padding:19px 22px 30px 22px;
   float: left;
+  height: 462px;
+  overflow:hidden;
   }
 
 #publications {
-  width: 281px;
+  width: 300px;
   background: #eee;
   border-right:1px solid #DBDBDB;
   -moz-border-radius: 6px 0 0 0;
@@ -240,37 +251,25 @@ row {
   background-position: 3px;
   }
 
-#activity {
-  padding-left: 0;
-  }
-
-#activity h2,
-.view-vsite-activity {
-  padding-left: 30px;
-  }
-
 #about-abstract {
-  width:357px;
-  padding: 28px 18px 0 18px;
+  width:347px;
+  padding: 12px 12px 0 18px;
   background: #e2e7eb;
+  height: 499px;
   -moz-border-radius: 0 6px 0 0;
   -webkit-border-radius: 0 6px 0 0;
   border-radius: 0 6px 0 0;
   }
 
 #about-abstract h2 {
-  font-size: 22px;
-  font-weight: 500;
+  font-size: 17px;
+  font-weight: bold;
   line-height: 1.3em;
   color:#a35353;
   color: #555;
-  margin-bottom: 1em;
+  margin-bottom: 29px;
   }
 
-#about-abstract p {
-  font-size: 14px;
-  line-height: 1.4empx;
-  }
 
 #about-abstract .illustration {
   float: right;
@@ -291,13 +290,13 @@ row {
   }
 
 #about-abstract .illust-theme {
-  width:105px;
+  width:109px;
   height: 96px;
   background-image: url(images/theme.png);
   }
 
 p#learn-more-toggle {
-  margin:1em 0 0 0;
+  margin:0;
   clear: both;
   }
 
@@ -306,6 +305,7 @@ p#learn-more-toggle a {
   margin: 0 -18px;
   display:block;
   padding: 18px;
+  padding-bottom: 40px;
   color: #fff;
   font-weight: bold;
   }
