--- a/sites/all/themes/openscholar/scholar_base/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/dropdown.css
@@ -31,7 +31,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul {
 }
 
 
-html.js div.ctools-dropdown div.ctools-dropdown-container, #ui-datepicker-div {
+html.js div.ctools-dropdown div.ctools-dropdown-container {
   min-width: 165px;
   background: #fff;
   border: 1px solid #b2b2b2;
@@ -111,32 +111,6 @@ ul.links .vsite-admin a.ctools-dropdown-link {
   float: left;
   }
 
-
-table.ui-datepicker-calendar {
-  width: 100%;
-  }
-
-#ui-datepicker-div {
-  padding: 25px 6px 10px 6px;
-  width: 212px;
-  }
-
-.ui-datepicker-next, .ui-datepicker-prev {
-  background: #fff;
-  }
-
-.ui-datepicker-title {
-  text-align: center;
-  padding-bottom: 6px;
-  }
-
-.ui-datepicker-calendar a {
-  padding: 1px;
-  }
-
-.ui-datepicker-calendar a:hover {
-  background: #e2f468;
-  }
 
 .page-node-add-event .date-clear-block {
   display:inline-block;
