removed marker line

--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -4,7 +4,7 @@ body {
   padding-bottom:30px;
   }
 
-
+/*
 #extradiv {
   top: 620px;
   width: 100%;
@@ -13,7 +13,7 @@ body {
   position: absolute;
   }
 
-
+*/
 #wrapper {
   margin-top: 0;
   }
