--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -38,6 +38,10 @@ body {
   overflow:hidden;
   }
 
+.front #content {
+  height: 530px;
+  }
+
 body.header- #content-wrapper {
   margin-top: 30px;
   }
@@ -235,7 +239,6 @@ row {
   width:334px;
   padding:19px 22px 30px 22px;
   float: left;
-  height: 462px;
   }
 
 #activity {
