--- a/sites/all/themes/openscholar/scholar_base/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/scholar-base.css
@@ -637,6 +637,7 @@ div.messages {
   color:#003366;
   margin:0 0 10px;
   padding:9px;
+  clear:both;
   }
 
 div.status {
@@ -708,7 +709,7 @@ div.error {
 	display: inline-block;
   }
 
-.clear-block {
+html[xmlns] .clear-block {
 	display: block;
   }
 
