--- a/sites/all/themes/openscholar/scholar_base/users.css
+++ b/sites/all/themes/openscholar/scholar_base/users.css
@@ -3,8 +3,11 @@
 
 .section-user #container,
 .section-users #container,
-.page-site-register #container {
- width: 506px;
+.page-site-register #container,
+.section-user #content-wrapper,
+.section-users #content-wrapper,
+.page-site-register #content-wrapper {
+ width: 506px !important;
  margin: 0 auto;
  }
 
@@ -17,7 +20,6 @@
 .page-site-register #content-wrapper {
  padding: 30px 30px 40px 30px !important;
  background: #fff;
- border: 1px solid #ccc;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  }
