featured sites changes

--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -236,7 +236,7 @@ row {
 #publications,
 #activity,
 #about-abstract {
-  width:334px;
+  width:337px;
   padding:19px 22px 30px 22px;
   float: left;
   }
@@ -345,7 +345,7 @@ row {
   display:block;
   color: #000;
   background-color: #f7f4d6;
-  padding: 15px 12px;
+  padding: 15px 12px 24px 24px;
   }
 
 #about-abstract ul.preview-points #learn-more-toggle a:hover {
@@ -461,7 +461,7 @@ p.copy a.poweredby {
 
 
 #block-views-openscholar_sites-block_2 ul {
-  width: 100%;
+  padding-top: 50px;
   }
 
 
@@ -479,84 +479,6 @@ p.copy a.poweredby {
   margin-top: -1px;
   float:left;
   }
-
-.block-search h3 {
-  display:none;
-  }
-
-.block-search .content {
-  width: 218px;
-  height: 32px;
-  background: url(images/search.png) no-repeat 100% 0 transparent;
-  float:right;
-  margin: 37px 0 0 0;
-  }
-
-#block-views-openscholar_sites-block_2 .views-exposed-widget {
-  width: auto;
-  }
-
-#block-views-openscholar_sites-block_2 .views-exposed-form .views-exposed-widget {
-  float:none;
-  }
-
-.edit-title-wrapper, .block-search .form-item, .block-search .form-submit, .block-search .clear-block {
-  margin: 0;
-  padding: 0;
-  border: none;
-  }
-
-.block-search label {
-  display:none;
-  }
-
-.block-search .form-text {
-  float:right;
-  width:184px;
-  height: 25px;
-  margin:3px 9px 0 0;
-  border: none;
-  }
-
-.block-search input.form-submit {
-  float:left;
-  background: transparent;
-  border: none;
-  width: 12px;
-  margin-top: 2px;
-  margin-right: 0;
-  margin-left:10px;
-  height: 30px;
-  text-indent: -9999em;
-  padding: 0 !important;
-  -moz-border-radius:0;
-  -webkit-border-radius:0;
-  border-radius:0;
-  }
-
-#views-exposed-form-iqss-project-sites-block-1 .form-actions {
-  margin: 0;
-  }
-
-#views-exposed-form-iqss-project-sites-block-1 span.views-throbbing {
-  position:absolute;
-  left: -45px;
-  top: 17px;
-  width: 21px;
-  height: 5px;
-  }
-
-
-#views-exposed-form-iqss-project-sites-block-1 span.form-button-wrapper {
-  background: transparent;
-  position: static;
-  display: inline;
-  padding: 0;
-  margin: 0;
-  }
-
-#search-person, #block-views-openscholar_sites-block_2 .views-exposed-form label {
-  display:none;
   }
 
 #block-views-openscholar_sites-block_2 {
@@ -567,15 +489,17 @@ p.copy a.poweredby {
 #block-views-openscholar_sites-block_2 .views-row {
   float: left;
   width: 127px;
-  margin-left: 30px;
+  margin-right:25px;
   clear: none;
-  font-size: 13px;
+  font-size: 12px;
+  }
+
+#block-views-openscholar_sites-block_2 .views-row-6 {
+  margin-right: 0;
   }
 
 #block-views-openscholar_sites-block_2 img, .view-iqss-project-sites img {
   border: 1px solid #535252;
-  width: 100px;
-  height: 100px;
   }
 
 .views-field-description p {
@@ -590,7 +514,7 @@ p.copy a.poweredby {
   font-weight: bold;
   }
 
-#block-views-openscholar_sites-block_2 ul, #block-views-openscholar_sites-block_2 .more-link {
+#block-views-openscholar_sites-block_2 .more-link {
   clear: both;
   }
 
@@ -599,7 +523,7 @@ p.copy a.poweredby {
   }
 
 
-#block-views-openscholar_sites-block_2 .views-admin-links ul{
+#block-views-openscholar_sites-block_2 .views-admin-links ul {
   background: transparent;
   height: auto;
   }
