--- a/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
+++ b/sites/all/themes/openscholar/openscholar_default/openscholar_default.css
@@ -189,87 +189,48 @@ p.single {
   margin-right: 8px;
   }
 
+
 /* FRONT PAGE vSITE PROFILES */
 
 
-#block-views-openscholar_sites-block_2 ul, #block-views-openscholar_sites-block_2 .more-link {
-  width: 100%;
-  height: 253px;
+#block-views-openscholar_sites-block_2 ul {
+  padding-top: 50px;
   }
+
+
 #block-views-openscholar_sites-block_2, #footer {
   position:relative;
   }
 
-#block-views-openscholar_sites-block_2 h3 {
-  background: transparent;
-  text-indent: -999em;
-  display:none;
-  margin: 0;
-  }
 
+#block-views-openscholar_sites-block_2 h3 {
+  background: url(images/featured.png) 0 0 no-repeat transparent;
+  text-indent: -999em;
+  width:70px;
+  height: 64px;
+  margin: 0;
+  margin-top: -1px;
+  float:left;
+  }
+  }
 
 #block-views-openscholar_sites-block_2 {
   clear: both;
+  background:#fff;
   }
 
 #block-views-openscholar_sites-block_2 .views-row {
   float: left;
-  width: 134px;
-  margin-left: 19px;
+  width: 127px;
+  margin-right:25px;
   clear: none;
-  font-size: 13px;
+  font-size: 12px;
   }
 
-#block-views-openscholar_sites-block_2 .views-row-1 {
-  margin-left:0;
+#block-views-openscholar_sites-block_2 .views-row-6 {
+  margin-right: 0;
   }
 
 #block-views-openscholar_sites-block_2 img, .view-iqss-project-sites img {
   border: 1px solid #535252;
-  width: 100px;
-  height: 100px;
-  }
-
-.views-field-description p {
-  font-weight: normal;
-  line-height: 1.1em;
-  margin-bottom: 0;
-  font-size: 11px;
-  }
-
-.views-field-title a {
-  color: #313030;
-  font-weight: bold;
-  }
-
-#block-views-openscholar_sites-block_2 ul, #block-views-openscholar_sites-block_2 .more-link {
-  clear: both;
-  }
-
-#block-views-openscholar_sites-block_2 .views-admin-links {
-  position: absolute;
-  top: -30px;
-  right: 0;
-  }
-
-
-#block-views-openscholar_sites-block_2 .views-admin-links ul{
-  background: transparent;
-  height: auto;
-  }
-
-#block-views-openscholar_sites-block_2 .more-link {
-  text-align: right;
-  background-position: 0 100%;
-  padding-bottom: 0;
-  height: auto;
-  }
-
-#block-views-openscholar_sites-block_2 .more-link a {
-  background: url(images/arrow-black.png) no-repeat 100% 50% #fff;
-  padding-right: 15px;
-  color: #000;
-  text-transform: capitalize;
-  font-weight: bold;
-  margin-right: 28px;
   }
