--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard-ie.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard-ie.css
@@ -1,3 +1,7 @@
-body.page-site-register h2.title {
-  margin-top:-55px;
+.front #content-wrapper {
+  position:relative;
+  }
+
+#about-abstract h2 {
+  font-size: 18px;
   }
