--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -112,7 +112,7 @@ h2 {
 
 /* SEARCH FORM */
 
-block-search h3 {
+.block-search h3 {
   display:none;
   }
 
@@ -252,7 +252,6 @@ ul#top-front li a:hover {
 
 #panel-wrapper {
   width: 1960px;
-  position: relative;
   }
 
 .panel {
@@ -353,6 +352,8 @@ row {
   color:#a35353;
   color: #555;
   margin-bottom: 14px;
+  margin-left:12px;
+  letter-spacing: -.5px;
   }
 
 #about-abstract .illustration {
@@ -445,7 +446,7 @@ row {
 
 .row-features {
   padding: 15px 0 30px 0;
-  background:#4c4d4e;
+  background:#000;
   }
 
 .row-features h2 {
