--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -1,5 +1,5 @@
 body {
-  background:#484848;
+  background:#666;
   font: 12px/17px arial, helvetica, sans-serif;
   padding-bottom:30px;
   }
@@ -29,9 +29,9 @@ body {
   -moz-border-radius: 6px;
   -webkit-border-radius: 6px;
   border-radius: 6px;
-  -moz-box-shadow: 0 .5em 2.5em rgba(0,0,0,0.6);
-  -webkit-box-shadow: 0 .5em 2.5em rgba(0,0,0,0.6);
-  box-shadow: 0 .5em 2.5em rgba(0,0,0,0.6);
+  -moz-box-shadow: 0 5px 13px rgba(0,0,0,0.35);
+  -webkit-box-shadow: 0 5px 13px rgba(0,0,0,0.35);
+  box-shadow: 0 5px 13px rgba(0,0,0,0.35);
   }
 
 .front #content-wrapper {
@@ -488,7 +488,7 @@ row {
   }
 
 p.copy a.poweredby {
-  background-position: 0 -29px;
+  background-position: 0 -52px;
   }
 
 p.copy {
