fixes to forms etc

--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard-ie.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard-ie.css
@@ -1,7 +1,6 @@
-.front #content-wrapper {
-  position:relative;
-  }
 
-#about-abstract h2 {
-  font-size: 18px;
-  }
+
+#about-abstract {
+  -ms-filter: "progid:DXImageTransform.Microsoft.Glow(color=#88888,strength=3) progid:DXImageTransform.Microsoft.Shadow(color=#888888,direction=135,strength=4)";
+	filter: progid:DXImageTransform.Microsoft.Glow(color=#888888,strength=3) progid:DXImageTransform.Microsoft.Shadow(color=#888888,direction=135,strength=4);
+    }
