--- a/sites/all/themes/openscholar/scholar_base/forms.css
+++ b/sites/all/themes/openscholar/scholar_base/forms.css
@@ -15,11 +15,20 @@ ul.links {
   }
 
 div.fieldset, fieldset, .container-inline-date {
-  background: #f8f8f8;
-  border: 1px solid #ccc;
+  background:#F3F3F3;
+  border: 1px solid #dddddd;
+  border-left: none;
+  border-right:none;
   margin: 0 0 10px;
   padding: 4px 9px;
   }
+
+
+legend, legend a {
+  color: #666;
+  font-weight: bold;
+  }
+
 
 fieldset h2.fieldset-title, div.form-item label {
   font-size:11px;
