minor change to activity link

--- a/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
+++ b/sites/all/themes/custom/scholars_harvard/scholars-harvard.css
@@ -416,8 +416,10 @@ row {
   }
 
 #activity-toggle a, #activity-toggle a:visited {
-  background: url(images/black-arrow-left.png) no-repeat 0 50%;
-  padding-left: 13px;
+  background: url(images/pointer-prev.png) no-repeat 0 50%;
+  padding-left: 26px;
+  font-weight:bold;
+  color: #000;
   }
 
 #activity-toggle a:hover {
